2020-16

* README + CHANGELOG
* remove old population dataset
* add StatsCan population + age cohorts

2020-15

* Initial version
* deaths / recoveries / cases
* doctors
* ICU
* population
* spending