@@ -259,3 +259,7 @@ age_90_up: 26735
 age_median: 37.1
 spending_pp: 7658
 doctors_pp: 0.00237
+poli_leader: Jason Kenny
+poli_leader_health: null
+poli_officer_cmo: Deena Hinshaw
+poli_covid_url: 'https://www.alberta.ca/coronavirus-info-for-albertans.aspx'
