@@ -259,3 +259,7 @@ age_90_up: 46648
 age_median: 42.2
 spending_pp: 6548
 doctors_pp: 0.00232
+poli_leader: John Horgan
+poli_leader_health: Adrian Dix
+poli_officer_cmo: Bonnie Henry
+poli_covid_url: 'http://www.bccdc.ca/health-info/diseases-conditions/covid-19'
