@@ -259,3 +259,7 @@ age_90_up: 12306
 age_median: 37.4
 spending_pp: 7404
 doctors_pp: 0.00204
+poli_leader: Brian Pallister
+poli_leader_health: null
+poli_officer_cmo: Brent Roussin
+poli_covid_url: 'https://manitoba.ca/covid19/'
