@@ -259,3 +259,8 @@ age_90_up: 7343
 age_median: 46
 spending_pp: 7187
 doctors_pp: 0.00222
+poli_leader: Blaine Higgs
+poli_leader_health: null
+poli_officer_cmo: Jennifer Russell
+poli_covid_url: >-
+  https://www2.gnb.ca/content/gnb/en/departments/ocmoh/cdc/content/respiratory_diseases/coronavirus.html
