@@ -259,3 +259,7 @@ age_90_up: 3613
 age_median: 47.1
 spending_pp: 8190
 doctors_pp: 0.00243
+poli_leader: Judy Foote
+poli_leader_health: John Haggie
+poli_officer_cmo: Janice Fitzgerald
+poli_covid_url: 'https://www.gov.nl.ca/covid-19/'
