@@ -259,3 +259,7 @@ age_90_up: 130138
 age_median: 40.4
 spending_pp: 6953
 doctors_pp: 0.0022
+poli_leader: Doug Ford
+poli_leader_health: null
+poli_officer_cmo: Vera Etches
+poli_covid_url: 'https://www.ontario.ca/page/2019-novel-coronavirus'
