@@ -259,3 +259,7 @@ age_90_up: 1257
 age_median: 43.2
 spending_pp: 7447
 doctors_pp: 0.00181
+poli_leader: Dennis King
+poli_leader_health: null
+poli_officer_cmo: Heather Morrison
+poli_covid_url: 'https://www.princeedwardisland.ca/en/topic/covid-19'
