@@ -259,3 +259,7 @@ age_90_up: 78681
 age_median: 42.6
 spending_pp: 6935
 doctors_pp: 0.00242
+poli_leader: François Legault
+poli_leader_health: null
+poli_officer_cmo: null
+poli_covid_url: 'https://www.quebec.ca/en/health/health-issues/a-z/2019-coronavirus/'
