@@ -259,3 +259,8 @@ age_90_up: 11743
 age_median: 37.4
 spending_pp: 7249
 doctors_pp: 0.00196
+poli_leader: Scott Moe
+poli_leader_health: null
+poli_officer_cmo: Saqib Shahab
+poli_covid_url: >-
+  https://www.saskatchewan.ca/government/health-care-administration-and-provider-resources/treatment-procedures-and-guidelines/emerging-public-health-issues/2019-novel-coronavirus
