@@ -3,6 +3,7 @@
 * README + CHANGELOG
 * remove old population dataset
 * add StatsCan population + age cohorts
+* add premier, CMO and COVID websites
 
 2020-15
 
